sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:9: error: ')' expected but ',' found.
     for (i<- 0, nbValeurs -2){
               ^AlgCocktailSort1:23: error: illegal start of simple expression
   } while(fin !=0)
   ^